--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.example.myapplication"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.myapplication">
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
-
-        <!-- Main activity -->
-        <activity android:name=".ui.MainActivity"
+        <activity
+            android:name=".ui.ProfileShowActivity"
+            android:exported="false" />
+        <activity
+            android:name=".user_information"
+            android:exported="false" /> <!-- Main activity -->
+        <activity
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- AddExpenseActivity -->
+        </activity> <!-- AddExpenseActivity -->
         <activity android:name=".ui.AddExpenseActivity" />
-
     </application>
 
 </manifest>
