--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.myapplication">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -22,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> <!-- AddExpenseActivity -->
-        <activity android:name=".ui.AddExpenseActivity" />
+<!--        <activity android:name=".ui.AddExpenseActivity" />-->
     </application>
 
 </manifest>
